; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_ce.c_ath10k_ce_shadow_src_ring_write_index_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath10k/extr_ce.c_ath10k_ce_shadow_src_ring_write_index_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath10k = type { i32 }
%struct.ath10k_ce_pipe = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ath10k*, %struct.ath10k_ce_pipe*, i32)* @ath10k_ce_shadow_src_ring_write_index_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath10k_ce_shadow_src_ring_write_index_set(%struct.ath10k* %0, %struct.ath10k_ce_pipe* %1, i32 %2) #0 {
  %4 = alloca %struct.ath10k*, align 8
  %5 = alloca %struct.ath10k_ce_pipe*, align 8
  %6 = alloca i32, align 4
  store %struct.ath10k* %0, %struct.ath10k** %4, align 8
  store %struct.ath10k_ce_pipe* %1, %struct.ath10k_ce_pipe** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ath10k*, %struct.ath10k** %4, align 8
  %8 = load %struct.ath10k*, %struct.ath10k** %4, align 8
  %9 = load %struct.ath10k_ce_pipe*, %struct.ath10k_ce_pipe** %5, align 8
  %10 = call i32 @shadow_sr_wr_ind_addr(%struct.ath10k* %8, %struct.ath10k_ce_pipe* %9)
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @ath10k_ce_write32(%struct.ath10k* %7, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @ath10k_ce_write32(%struct.ath10k*, i32, i32) #1

declare dso_local i32 @shadow_sr_wr_ind_addr(%struct.ath10k*, %struct.ath10k_ce_pipe*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
